--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tufte-css"]
 	path = tufte-css
-	url = git://github.com/edwardtufte/tufte-css.git
+	url = https://github.com/edwardtufte/tufte-css.git
